--- a/src/main/java/UI/Component/DoanhThuJDialog.form
+++ b/src/main/java/UI/Component/DoanhThuJDialog.form
@@ -464,6 +464,9 @@
               </Layout>
               <SubComponents>
                 <Component class="javax.swing.JTextField" name="txtTimKiem">
+                  <Events>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTimKiemKeyPressed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
